# head_trajectory

./: LICENSE  README.md  requirements.txt
HandEyeCalibration/: CMakeLists.txt  README.md  trajectory_alignment.cpp
HandEyeCalibration/data_format_example/: opti.csv  unity.csv
data/: README.md
data/experiments/linked_tum/: calib_quest2_to_tool1.txt  calib_quest2_to_tool1_cut.txt  calib_quest_pro_to_tool1.txt  calib_quest_pro_to_tool1_cut.txt  calib_tool1_gt.txt  calib_tool1_gt_cut.txt  calib_tool2_gt.txt  calib_tool2_gt_cut.txt  traj1_quest2_to_tool1.txt  traj1_quest2_to_tool1_cut.txt  traj1_quest_pro_to_tool1.txt  traj1_quest_pro_to_tool1_cut.txt  traj1_tool1_gt_cut.txt  traj1_tool2_gt.txt  traj1_tool2_gt_cut.txt
data/experiments/linked_tum_paper_manual/traj1_cut/: traj1_quest2_to_tool1_cut.txt  traj1_quest_pro_to_tool1_cut.txt  traj1_tool1_gt.txt  traj1_tool1_gt_cut.txt  traj1_tool2_gt_cut.txt
data/experiments/linked_tum_paper_manual/traj2_results_cut/: traj2_quest2_to_tool1.txt  traj2_quest2_to_tool1_cut.txt  traj2_quest_pro_to_tool1.txt  traj2_quest_pro_to_tool1_cut.txt  traj2_tool1_gt.txt  (+3 more)
data/real_world_head_trajectories/: real_world_head_movement_example_0.bag
determining_robot_motions/: calculate_robot_trajectory.py
evaluation/: auto_remove_idle_and_brake.py  trajectory_TUM_match_by_tool_time.py
prepare_calibration_data/: compare_traj_peaks.py  match_poses_by_time.py
unity_tracking_app/: README.md
unity_tracking_app/Assets/: GetHeadPosition.cs  GetLeftHandPosition.cs  GetRightHandPosition.cs  PoseCollector.cs
utility/: tool_pose_publisher.py
(+14 files in other folders)
